ทำ responsive หน้า OTP, Register

--- a/src/pages/OTP/RequestContainer/style.css
+++ b/src/pages/OTP/RequestContainer/style.css
@@ -1,11 +1,7 @@
 .requestotppage {
-    /* background-color: rgb(184, 230, 173); */
     background-color: white;
-    /* position: static; */
-    /* top: 68px; */
     text-align: center;
     min-height: 681px;
-    /* max-width: var(--container-content-width); */
     width: 100%;
     padding: 80px 0 0 0;
     display: flex;
@@ -17,14 +13,11 @@
     max-width: var(--form-card-width); 
 }
 .requestotppage .request-content {
-    /* max-width: var(--container-content-width);  */
     width: 100%;
     padding: 60px 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* height: 500px; */
     justify-content: center;
-    /* gap: 20px; */
 }
 
 .requestotppage .left-column {
@@ -35,5 +28,106 @@
 .requestotppage .right-column {
     background-color: #ffffff;
     padding: 20px;
-    /* border-left: 1px solid #ddd; */
+}
+
+@media only screen and (max-width:1280px){
+    .requestotppage {
+        background-color: white;
+        text-align: center;
+        min-height: 681px;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .requestotppage .reqcard-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .requestotppage .request-content {
+        width: 100%;
+        padding: 60px 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
+    
+    .requestotppage .left-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+    
+    .requestotppage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .requestotppage {
+        background-color: white;
+        text-align: center;
+        min-height: 681px;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .requestotppage .reqcard-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .requestotppage .request-content {
+        width: 100%;
+        padding: 60px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .requestotppage .left-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+    
+    .requestotppage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:360px){
+    .requestotppage {
+        background-color: white;
+        text-align: center;
+        min-height: 681px;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .requestotppage .reqcard-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .requestotppage .request-content {
+        width: 100%;
+        padding: 60px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .requestotppage .left-column {
+        background-color: #ffffff;
+        padding: unset;
+    }
+    
+    .requestotppage .right-column {
+        background-color: #ffffff;
+        padding: unset;
+    }
 }
