--- a/src/pages/OTP/RequestStep/style.css
+++ b/src/pages/OTP/RequestStep/style.css
@@ -17,3 +17,54 @@
     text-align: center; 
     margin: 100px 0 0 0;
 } */
+
+@media only screen and (max-width:1280px){
+    .requeststep {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        font-size: 13px;
+    }
+    
+    .requeststep .otpimg {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .requeststep {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        font-size: 13px;
+    }
+    
+    .requeststep .otpimg {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width:360px){
+    .requeststep {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        font-size: 13px;
+    }
+    
+    .requeststep .otpimg {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+    }
+}
