--- a/src/pages/Register/RegisterContainer/style.css
+++ b/src/pages/Register/RegisterContainer/style.css
@@ -1,11 +1,6 @@
 .registerpage {
-    /* background-color: rgb(184, 230, 173); */
     background-color: white;
-    /* position: static; */
-    /* top: 68px; */
     text-align: left;
-    /* min-height: 1000px; */
-    /* max-width: var(--container-content-width); */
     width: 100%;
     padding: 80px 0 0 0;
     display: flex;
@@ -17,23 +12,178 @@
     max-width: var(--form-card-width); 
 }
 .registerpage .register-content {
-    /* max-width: var(--container-content-width);  */
     width: 100%;
     padding: 60px 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* height: 500px; */
     justify-content: center;
-    /* gap: 20px; */
 }
 
 .registerpage .left-column {
-    /* background-color: #f4c8c8; */
     padding: 20px;
 }
 
 .registerpage .right-column {
     background-color: #ffffff;
-    padding: 20px;
-    /* border-left: 1px solid #ddd; */
+    padding: 10px;
+}
+
+@media only screen and (max-width:1280px){
+    .registerpage {
+        background-color: white;
+        text-align: left;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerpage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .registerpage .register-content {
+        width: 100%;
+        padding: 60px 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
+    
+    .registerpage .left-column {
+        padding: 20px;
+    }
+    
+    .registerpage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .registerpage {
+        background-color: white;
+        text-align: left;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerpage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .registerpage .register-content {
+        width: 100%;
+        padding: 0px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .registerpage .left-column {
+        padding: 20px;
+    }
+    
+    .registerpage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:500px){
+    .registerpage {
+        background-color: white;
+        text-align: left;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerpage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .registerpage .register-content {
+        width: 100%;
+        padding: 0px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .registerpage .left-column {
+        padding: 20px;
+    }
+    
+    .registerpage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:414px){
+    .registerpage {
+        background-color: white;
+        text-align: left;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerpage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .registerpage .register-content {
+        width: 100%;
+        padding: 0px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .registerpage .left-column {
+        padding: 20px;
+    }
+    
+    .registerpage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
+}
+
+@media only screen and (max-width:360px){
+    .registerpage {
+        background-color: white;
+        text-align: left;
+        width: 100%;
+        padding: 80px 0 0 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerpage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width); 
+    }
+    .registerpage .register-content {
+        width: 100%;
+        padding: 0px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+    
+    .registerpage .left-column {
+        padding: 20px;
+    }
+    
+    .registerpage .right-column {
+        background-color: #ffffff;
+        padding: 20px;
+    }
 }
