--- a/src/pages/Home/Advice/style.css
+++ b/src/pages/Home/Advice/style.css
@@ -11,6 +11,10 @@
     flex-direction: column;
 }
 
+.advice .titleBox {
+    width: auto;
+}
+
 .advice .boxContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -77,10 +81,295 @@
     transition: 0.3s;
 }
 
-.advice a:hover{
+.advice a:hover {
     color: #585958;
 }
 
 .advice .link {
     padding: 20px 0 0 0;
+}
+
+@media only screen and (max-width:995px) {
+    .advice {
+        display: flex;
+        margin: 50px 0 100px 0;
+    }
+
+    .advice .adviceContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .advice .titleBox {
+        width: 100%;
+    }
+
+    .advice .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+        row-gap: 40px;
+    }
+
+    .advice .box {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        justify-items: left;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .advice .txtBox {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        align-items: center;
+    }
+
+    .advice .img1 {
+        width: 161.12px;
+        height: 167px;
+    }
+
+    .advice .img2 {
+        width: 139px;
+        height: 165.23px;
+        margin: 0 14px 0 0;
+    }
+
+    .advice h1 {
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 37.7px;
+        text-align: center;
+        color: #585958;
+        padding: 0 0 30px 0;
+    }
+
+    .advice h3 {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 29px;
+        text-align: left;
+        color: #585958;
+    }
+
+    .advice p {
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20.3px;
+        text-align: left;
+        color: #959594;
+    }
+
+    .advice a {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 17.4px;
+        color: #9E7F5D;
+        transition: 0.3s;
+    }
+
+    .advice a:hover {
+        color: #585958;
+    }
+
+    .advice .link {
+        padding: 20px 0 0 0;
+    }
+}
+
+@media only screen and (max-width:485px) {
+    .advice {
+        display: flex;
+        margin: 50px 0 100px 0;
+    }
+
+    .advice .adviceContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .advice .titleBox {
+        width: 80%;
+    }
+
+    .advice .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+        row-gap: 40px;
+    }
+
+    .advice .box {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: left;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .advice .txtBox {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        align-items: center;
+    }
+
+    .advice .img1 {
+        width: 161.12px;
+        height: 167px;
+    }
+
+    .advice .img2 {
+        width: 139px;
+        height: 165.23px;
+        margin: 0 14px 0 0;
+    }
+
+    .advice h1 {
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 37.7px;
+        text-align: center;
+        color: #585958;
+        padding: 0 0 30px 0;
+    }
+
+    .advice h3 {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 29px;
+        text-align: left;
+        color: #585958;
+    }
+
+    .advice p {
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20.3px;
+        text-align: left;
+        color: #959594;
+    }
+
+    .advice a {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 17.4px;
+        color: #9E7F5D;
+        transition: 0.3s;
+    }
+
+    .advice a:hover {
+        color: #585958;
+    }
+
+    .advice .link {
+        padding: 20px 0 0 0;
+    }
+}
+
+@media only screen and (max-width:354px) {
+    .advice {
+        display: flex;
+        margin: 50px 0 100px 0;
+    }
+
+    .advice .adviceContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .advice .titleBox {
+        width: 60%;
+    }
+
+    .advice .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+        row-gap: 40px;
+    }
+
+    .advice .box {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: left;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .advice .txtBox {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        align-items: center;
+    }
+
+    .advice .img1 {
+        width: 161.12px;
+        height: 167px;
+    }
+
+    .advice .img2 {
+        width: 139px;
+        height: 165.23px;
+        margin: 0 14px 0 0;
+    }
+
+    .advice h1 {
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 37.7px;
+        text-align: center;
+        color: #585958;
+        padding: 0 0 30px 0;
+    }
+
+    .advice h3 {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 29px;
+        text-align: left;
+        color: #585958;
+    }
+
+    .advice p {
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20.3px;
+        text-align: left;
+        color: #959594;
+    }
+
+    .advice a {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 17.4px;
+        color: #9E7F5D;
+        transition: 0.3s;
+    }
+
+    .advice a:hover {
+        color: #585958;
+    }
+
+    .advice .link {
+        padding: 20px 0 0 0;
+    }
 }
