--- a/src/pages/Home/SearchJob/style.css
+++ b/src/pages/Home/SearchJob/style.css
@@ -1,30 +1,28 @@
 .JobContainer {
-    position: relative;
     display: flex;
+    margin: 68px 0 0 0;
+    flex-direction: column;
 }
 
 .JobContainer .bg {
-    width: 100vw;
+    width: 100%;
     height: fit-content;
 }
 
 .JobContainer .searchContainner {
     justify-content: center;
     align-items: center;
-    position: absolute;
-    background-color: #139791B5;
-    width: 100vw;
+    background-color: var(--gold-bg-color);
+    width: 100%;
     height: 112px;
     top: 0px;
     display: flex;
-    backdrop-filter: blur(8px);
 }
 
 .JobContainer .searchBox {
     justify-content: center;
     align-items: left;
     width: var(--container-content-width);
-    position: absolute;
     min-height: 112px;
     top: 0px;
     display: flex;
@@ -109,4 +107,242 @@
 .JobContainer .icon {
     position: absolute;
     padding: 0 20px 0 10px;
+}
+
+@media only screen and (max-width:1222px) {
+    .JobContainer {
+        display: flex;
+        margin: 68px 0 0 0;
+        flex-direction: column;
+    }
+
+    .JobContainer .bg {
+        width: 100%;
+        height: fit-content;
+    }
+
+    .JobContainer .searchContainner {
+        justify-content: center;
+        align-items: center;
+        background-color: var(--gold-bg-color);
+        width: 100%;
+        height: 112px;
+        top: 0px;
+        display: flex;
+    }
+
+    .JobContainer .searchBox {
+        justify-content: center;
+        align-items: left;
+        width: 80%;
+        min-height: 112px;
+        top: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .JobContainer .txt {
+        font-family: Kittithada Bold 75;
+        font-size: 20px;
+        font-weight: 700;
+        color: #FFFFFF;
+    }
+
+    .JobContainer .inputbox {
+        display: grid;
+        grid-template-columns: 2fr 3fr 1fr;
+        width: 100%;
+        column-gap: 10px;
+        align-items: center;
+        padding: 10px 0 0 0;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .JobContainer input {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid #E6E6E6;
+        background: none;
+        padding: 12px 20px;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .JobContainer .first {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid #E6E6E6;
+        background: none;
+        padding: 12px 40px;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .JobContainer input:focus {
+        border: none;
+    }
+
+    .JobContainer input::placeholder {
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+
+    }
+
+    .JobContainer .searchButton {
+        width: 103px;
+        height: 38px;
+        border-radius: 6px;
+        border: solid #FFFFFF;
+        font-family: Sukhumvit Set;
+        font-size: 16px;
+        font-weight: 600;
+        color: #00605C;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFFFFF;
+        transition: 0.3s;
+        justify-self: left;
+    }
+
+    .JobContainer .searchButton:hover {
+        opacity: 0.9;
+    }
+
+    .JobContainer .txtButton {
+        padding: 0 0 0 10px;
+    }
+
+    .JobContainer .icon {
+        position: absolute;
+        padding: 0 20px 0 10px;
+        justify-self: left;
+    }
+}
+
+@media only screen and (max-width:745px) {
+    .JobContainer {
+        display: flex;
+        margin: 68px 0 0 0;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .JobContainer .bg {
+        width: 100%;
+        height: fit-content;
+    }
+
+    .JobContainer .searchContainner {
+        justify-content: center;
+        align-items: center;
+        background-color: var(--gold-bg-color);
+        width: 100%;
+        height: 220px;
+        top: 0px;
+        display: flex;
+    }
+
+    .JobContainer .searchBox {
+        justify-content: center;
+        align-items: left;
+        width: 80%;
+        min-height: 112px;
+        top: 0px;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .JobContainer .txt {
+        font-family: Kittithada Bold 75;
+        font-size: 20px;
+        font-weight: 700;
+        color: #FFFFFF;
+    }
+
+    .JobContainer .inputbox {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        column-gap: 10px;
+        align-items: center;
+        padding: 10px 0 0 0;
+        justify-items: center;
+        align-items: center;
+        gap: 10px 0;
+    }
+
+    .JobContainer input {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid #E6E6E6;
+        background: none;
+        padding: 12px 20px;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .JobContainer .first {
+        width: 100%;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid #E6E6E6;
+        background: none;
+        padding: 12px 40px;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .JobContainer input:focus {
+        border: none;
+    }
+
+    .JobContainer input::placeholder {
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 400;
+
+    }
+
+    .JobContainer .searchButton {
+        width: 103px;
+        height: 38px;
+        border-radius: 6px;
+        border: solid #FFFFFF;
+        font-family: Sukhumvit Set;
+        font-size: 16px;
+        font-weight: 600;
+        color: #00605C;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFFFFF;
+        transition: 0.3s;
+        justify-self: right;
+    }
+
+    .JobContainer .searchButton:hover {
+        opacity: 0.9;
+    }
+
+    .JobContainer .txtButton {
+        padding: 0 0 0 10px;
+    }
+
+    .JobContainer .icon {
+        position: absolute;
+        padding: 0 20px 0 10px;
+        justify-self: left;
+        top: 70px;
+    }
 }
