--- a/src/pages/Home/hostpital/style.css
+++ b/src/pages/Home/hostpital/style.css
@@ -98,3 +98,312 @@
     color: #585958;
     padding: 0 0 20px 30px;
 }
+
+@media only screen and (max-width:1100px) {
+    .hostpital {
+        display: flex;
+        margin: 20px 0 100px 0;
+    }
+
+    .hostpital .hostContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hostpital .txtBox {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hostpital .link {
+        text-align: end;
+        padding: 10px 30px 0 0;
+    }
+
+    .hostpital a {
+        color: #9E7F5D;
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20.3px;
+        text-align: center;
+
+        transition: 0.3s;
+    }
+
+    .hostpital a:hover {
+        color: #585958;
+    }
+
+    .hostpital .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px 20px;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .hostpital .box {
+        width: 215px;
+        height: 92px;
+        border-radius: 6px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 22px 0px #879B9438;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: solid #FFFFFF;
+        color: #585958;
+        transition: 0.3s;
+
+    }
+
+    .hostpital .box:hover {
+        border: 1.5px solid #bfd2d1;
+        box-shadow: 0px 10px 10px 0px #bfd2d1;
+    }
+
+    .hostpital .img {
+        width: 95px;
+        height: 42px;
+    }
+
+    .hostpital .bnh {
+        width: 33px;
+        height: 39px;
+    }
+
+    .hostpital .fhf {
+        width: 65px;
+        height: 43px;
+    }
+
+    .hostpital h3 {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 17.4px;
+        text-align: center;
+        padding: 10px 0 0 0;
+    }
+
+    .hostpital h1 {
+        font-family: Sukhumvit Set;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 34.8px;
+        text-align: left;
+        color: #585958;
+        padding: 0 20px 20px 0;
+    }
+}
+
+@media only screen and (max-width:710px) {
+    .hostpital {
+        display: flex;
+        margin: 20px 0 100px 0;
+    }
+
+    .hostpital .hostContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hostpital .txtBox {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .hostpital .link {
+        text-align: end;
+        padding: 0 0 20px 0;
+    }
+
+    .hostpital a {
+        color: #9E7F5D;
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20.3px;
+        text-align: center;
+
+        transition: 0.3s;
+    }
+
+    .hostpital a:hover {
+        color: #585958;
+    }
+
+    .hostpital .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px 20px;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .hostpital .box {
+        width: 215px;
+        height: 92px;
+        border-radius: 6px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 22px 0px #879B9438;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: solid #FFFFFF;
+        color: #585958;
+        transition: 0.3s;
+
+    }
+
+    .hostpital .box:hover {
+        border: 1.5px solid #bfd2d1;
+        box-shadow: 0px 10px 10px 0px #bfd2d1;
+    }
+
+    .hostpital .img {
+        width: 95px;
+        height: 42px;
+    }
+
+    .hostpital .bnh {
+        width: 33px;
+        height: 39px;
+    }
+
+    .hostpital .fhf {
+        width: 65px;
+        height: 43px;
+    }
+
+    .hostpital h3 {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 17.4px;
+        text-align: center;
+        padding: 10px 0 0 0;
+    }
+
+    .hostpital h1 {
+        font-family: Sukhumvit Set;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 34.8px;
+        text-align: left;
+        color: #585958;
+        padding: 0px;
+    }
+}
+
+@media only screen and (max-width:470px) {
+    .hostpital {
+        display: flex;
+        margin: 20px 0 100px 0;
+    }
+
+    .hostpital .hostContainer {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hostpital .txtBox {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .hostpital .link {
+        text-align: end;
+        padding: 0 0 20px 0;
+    }
+
+    .hostpital a {
+        color: #9E7F5D;
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20.3px;
+        text-align: center;
+
+        transition: 0.3s;
+    }
+
+    .hostpital a:hover {
+        color: #585958;
+    }
+
+    .hostpital .boxContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px 20px;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .hostpital .box {
+        width: 215px;
+        height: 92px;
+        border-radius: 6px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 22px 0px #879B9438;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: solid #FFFFFF;
+        color: #585958;
+        transition: 0.3s;
+
+    }
+
+    .hostpital .box:hover {
+        border: 1.5px solid #bfd2d1;
+        box-shadow: 0px 10px 10px 0px #bfd2d1;
+    }
+
+    .hostpital .img {
+        width: 95px;
+        height: 42px;
+    }
+
+    .hostpital .bnh {
+        width: 33px;
+        height: 39px;
+    }
+
+    .hostpital .fhf {
+        width: 65px;
+        height: 43px;
+    }
+
+    .hostpital h3 {
+        font-family: Sukhumvit Set;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 17.4px;
+        text-align: center;
+        padding: 10px 0 0 0;
+    }
+
+    .hostpital h1 {
+        font-family: Sukhumvit Set;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 34.8px;
+        text-align: left;
+        color: #585958;
+        padding: 0px;
+    }
+}
