--- a/src/pages/OTP/RequestContainer/style.css
+++ b/src/pages/OTP/RequestContainer/style.css
@@ -1,7 +1,7 @@
 .requestotppage {
     background-color: white;
     text-align: center;
-    min-height: 681px;
+    min-height: 80vh;
     width: 100%;
     padding: 80px 0 0 0;
     display: flex;
