--- a/src/pages/PersonalInfo/InfoContainer/style.css
+++ b/src/pages/PersonalInfo/InfoContainer/style.css
@@ -72,5 +72,83 @@
     font-size: 14px;
     font-weight: 600;
 
+}
 
+@media only screen and (max-width:640px) {
+    .InfoPage {
+        background-color: white;
+        text-align: left;
+        min-height: 200vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .InfoPage .card-group {
+        width: 100%;
+        max-width: var(--form-card-width);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 100px 0 0 0;
+    }
+
+    .InfoPage .Info-content {
+        /* max-width: var(--container-content-width);  */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .InfoPage .top {
+        background-color: cyan;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .InfoPage .under {
+        background-color: #FFFFFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .InfoPage .Info-buttonBox {
+        padding: 20px 0 50px 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-items: center;
+        gap: 20px 0;
+    }
+
+    .InfoPage .B1 {
+
+        background-color: #585958;
+        width: 119px;
+        height: 38px;
+        border-radius: 6px;
+        color: #FFFFFF;
+        border: none;
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .InfoPage .B2 {
+        background-color: var(--head-background-color);
+        width: 196px;
+        height: 38px;
+        border-radius: 6px;
+        color: #FFFFFF;
+        border: none;
+        font-family: Sukhumvit Set;
+        font-size: 14px;
+        font-weight: 600;
+
+    }
 }
