--- a/src/pages/Home/Feedback/style.css
+++ b/src/pages/Home/Feedback/style.css
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     background-color: #636463;
-    width: 1473px;
+    width: 100%;
     height: 370px;
     display: flex;
 }
