--- a/src/pages/Home/homeContainer/style.css
+++ b/src/pages/Home/homeContainer/style.css
@@ -1,7 +1,7 @@
 .HomePage {
     background-color: white;
     text-align: left;
-    min-height: 150vh;
+    min-height: auto;
     width: 100%;
     display: flex;
     justify-content: center;
