--- a/src/pages/Home/Feedback/style.css
+++ b/src/pages/Home/Feedback/style.css
@@ -299,7 +299,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1280px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -577,7 +577,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1222px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -855,7 +855,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1221px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -1133,7 +1133,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1212px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -1411,7 +1411,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1208px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -1689,7 +1689,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1205px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -1967,7 +1967,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1200px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -2245,7 +2245,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1194px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -2523,7 +2523,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1189px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -2801,7 +2801,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1183px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -3079,7 +3079,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1170px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -3357,7 +3357,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1169px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -3634,7 +3634,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 1000px;
+        width: 100%;
         height: 370px;
         display: flex;
     }
@@ -3911,7 +3911,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 985px;
+        width: 100%;
         height: 550px;
         display: flex;
     }
@@ -4190,7 +4190,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 883px;
+        width: 100%;
         height: 550px;
         display: flex;
     }
@@ -4469,7 +4469,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 800px;
+        width: 100%;
         height: 550px;
         display: flex;
     }
@@ -4748,7 +4748,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 575px;
+        width: 100%;
         height: 800px;
         display: flex;
     }
@@ -5028,7 +5028,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 428px;
+        width: 100%;
         height: 780px;
         display: flex;
     }
@@ -5309,7 +5309,7 @@
         justify-content: center;
         align-items: center;
         background-color: #636463;
-        width: 415px;
+        width: 100%;
         height: 780px;
         display: flex;
     }
